[package]
name = "abacatepay-rust-sdk"
version = "0.1.1"
edition = "2021"
authors = ["Jose Miguel Araujo Silva <miguelpintojose00@gmail.com>"]
description = "Official Rust SDK for AbacatePay API"
license = "MIT"
repository = "https://github.com/m1guer/abacate-pay-sdk"
documentation = "https://docs.rs/abacate-pay-sdk"
readme = "Readme.md"
keywords = ["payment", "sdk", "api","gateway"]
categories = ["api-bindings","gateway"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
